--- a/common/body_tag.html
+++ b/common/body_tag.html
@@ -1,4 +1,4 @@
-<script>
+<script type="text/discourse-plugin" version="0.8">
 const addNewWindowSVG = () => {
   const svg = `<svg style="display:inline-block;width:1em;height:auto;fill:currentcolor;vertical-align:text-bottom;margin-left:8px;transform:scale(1.5)" viewBox="0 0 80 80"><title>Opens in new window</title><path d="m48 26-2 2v26H10V18h26l2-2-2-2H8l-2 2v40l2 2h40l2-2V28l-2-2z" /><path d="M56 6H44l-2 2 2 2h7L31 31v2l1 1 1-1 21-20v7l2 2 2-2V8l-2-2z" /></svg>`
   const newWindowLinks = document.querySelectorAll('[href][target=_blank]');
